# Promtree

./: .gitattributes  .gitignore  CLAUDE.md  README.md  START_HERE.md  docker-compose.yaml  example.env  main.py  msds.py  msds_all_sections.json  msds_sections_llm_MOCK_MSDS_007.json  msds_sections_regex.json  pyproject.toml  tds.py
app/: app.py  db.py
app/core/: msds.py  tds.py
app/models/: chat.py  collection.py  message.py  user.py
app/promtree/: parsing.py
app/rag/: check_es.py  check_neo4j.py  check_qdrant.py  (+10 more)
backend/: .env.example  README.md  requirements.txt
cleanup/promtree/: pyproject.toml
cleanup/promtree/promtree/: __init__.py  __main__.py  pdf_to_txt.py  promtree.py  structure.py
common/: docker-compose.yaml  init.py  requirements.txt  sample.env  setup.ipynb
db/: mongodb.py
db3/: requirements.txt  sample.md  sample2.md  tds_extraction.py  tds_extraction_fixed.py  tds_extraction_mongo_test.py  tds_extraction_mongodb_fixed.py
demo/: de_parser.py  docker-compose.yaml  parser.ipynb  parsing.py  promtree.py  pyplum.py  requirements.txt  testparser.ipynb  unparser.ipynb
es/: Dockerfile
etl/: msds_openai.py  parsing_deepseek.py
exec/: Porting_Manual.md
frontend/: .env.example  .gitignore  API_SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js
neo4j/: Dockerfile
parser/: .gitignore  main.py  msds_down.py  multi_parsing.py  simple_parsing.py
promtree/: README.md  requirements.txt
retriever/: base_vector_store.py  embedding.py  embedding_test.py  find_chunk_population.py  markdown_chunker.py  openai_embedding.py  parsing.py  pdf_chunking_processor.py  pdf_ingestion_pipeline.py  pdf_preprocessing.py  rag_requirements.txt  rag_system.py  retriever.py  search.py  store_embeddings.py  tt_processed.md  weaviate_vector_store.py
superapp/: app.py
testmd/: no_table_example.md  table_example.md  table_example_processed_processed.md
(+200 files in other folders)
