[project]
name = "s307"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "bcrypt>=4.0.0,<5.0.0",
    "beanie>=2.0.0",
    "beautifulsoup4>=4.14.2",
    "docling>=2.62.0",
    "dotenv>=0.9.9",
    "elasticsearch>=9.2.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "motor>=3.7.1",
    "neo4j>=6.0.3",
    "openai>=2.8.1",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.4",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "urlextract>=1.9.0",
    "uvicorn[standard]>=0.38.0",
]
